--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "hotReload": "adb reverse tcp:8081 tcp:8081 && adb shell input text \"RR\"",
+    "devMenu": "adb shell input keyevent 82",
+    "cleanupRN": "react-native start --reset-cache",
+    "cleanupAndroid": "cd android && ./gradlew clean"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
